# khela-dekho

./: .gitignore  README.md  skills-lock.json
backend/: .gitignore  Dockerfile  blog.db  docker-compose.yml  project_features.md  pyproject.toml  reset_db.py  skills-lock.json  worklist.md
backend/app/: config.py  database.py  email.py  main.py  models.py  s3.py  schemas.py  security.py
backend/app/routers/: auth.py  baseball.py  categories.py  cricket.py  livescores.py  posts.py  tags.py  users.py
backend/app/services/: baseball_service.py  cricket_service.py  football_service.py
backend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
backend/graphify-out/cache/: stat-index.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_add_draft_support.py
backend/tests/: test_auth_logout.py  test_reactions.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  worklist.md
frontend/components/ui/: FootballCursor.tsx  card.tsx
frontend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
frontend/graphify-out/cache/: stat-index.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/configs/: apiClient.ts  queryClient.ts
frontend/src/app/create-post/: page.tsx
frontend/src/app/login/: page.tsx
study_notes/: authentication.md  completing_crud_operations.md  fastapi_routers.md  postgresql_full_text_search.md  pydantic_validation.md  sqlalchemy_models_relationship.md  sync_vs_async_database.md
(+56 files in other folders)
