[project]
name = "sports-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "boto3>=1.43.44",
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uuid6>=2025.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

